--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,117 +1,114 @@
-<!DOCTYPE html>
-<html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}}
+{% set pageId = "page-create-point" %}
+
+{% block title %}
     <title>Criar um ponto de coleta</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/main.css">
+{% endblock title %}
+
+{% block styles %}
     <link rel="stylesheet" href="styles/create-point.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-    
-</head>
-<body>
-    
-    <div id="page-create-point">
-        
-        <header>
-            <img src="assets/logo.svg" alt="Logo Marca">
-            <a href="index.html">
-                <span></span>
-                Voltar para a home
-            </a>
-        </header>
-        
-        <form action="">
-            <h1>Cadastro do ponto de coleta</h1>
-            <fieldset>
-                <legend>
-                    <h2>Dados da entidade</h2>
-                </legend>
-                
+{% endblock styles %}
+
+{% block content %}
+    {% include "partials/page-header.html" %}
+
+    <form action="">
+        <h1>Cadastro do ponto de coleta</h1>
+        <fieldset>
+            <legend>
+                <h2>Dados da entidade</h2>
+            </legend>
+
+            <div class="field-group">
                 <div class="field">
-                    <label for="name">Nome da entidade</label>
-                    <input type="text" name="name">
+                    <label for="address2">Nome da entidade</label>
+                    <input type="text" name="name" requirede="requirede">
                 </div>
-                
-                <div class="field-group">
-                    
-                    <!-- .field*2 dica:criar as duas div com class field * = x2 -->
-                    <div class="field">
-                        <!-- label+input cria label e input -->
-                        <label for="address">Endereço</label>
-                        <input type="text" name="address">
-                    </div>
-                    
-                    <div class="field">
-                        <label for="address2">Número/Complemento</label>
-                        <input type="text" name="address2">
-                    </div>
+                <div class="field">
+                    <label for="address2">Imagem da entidade</label>
+                    <input type="url" name="image" placeholder="http://" requirede="requirede">
                 </div>
-                
-                <div class="field-group">
-                    
-                    <!-- .field*2 dica:criar as duas div com class field * = x2 -->
-                    <div class="field">
-                        <label for="state">Estado</label>
-                        <select name="uf">
-                            <option value="">Selecione o Estado</option>
-                        </select>
-                    </div>
-                    
-                    <div class="field">
-                        <!-- label+input cria label e input -->
-                        <label for="city">Cidade</label>
-                        <select name="city" disabled>
-                            <option value="">Selecione a Cidade</option>
-                        </select>
-                    </div>
-                    <input type="hidden" name="state">
+            </div>
+            <div class="field-group">
+
+                <!-- .field*2 dica:criar as duas div com class field * = x2 -->
+                <div class="field">
+                    <!-- label+input cria label e input -->
+                    <label for="address">Endereço</label>
+                    <input type="text" name="address" requirede="requirede">
                 </div>
-            </fieldset>
-            
-            <fieldset>
-                <legend>
-                    <h2>Ítens de Coleta</h2>
-                </legend>
-                <div class="items-grid">
-                    <li data-id="1">
-                        <img src="/assets/lampadas.svg" alt="Lâmpadas">
-                        <span>Lâmpadas</span>
-                    </li>
-                    <!-- dica: ctrl + D seleciona os dois nomes identicos e pode ser alterado ao mesmo tempo -->
-                    <li data-id="2">
-                        <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
-                        <span>Pilhas e Baterias</span>
-                    </li>
-                    
-                    <li data-id="3">
-                        <img src="/assets/papeis-papelao.svg" alt="Pepéis e Papelão">
-                        <span>Pepeis e Papelão</span>
-                    </li>
-                    
-                    <li data-id="4">
-                        <img src="/assets/eletronicos.svg" alt="Resíduos Eletronicos">
-                        <span>Resíduos Eletronicos</span>
-                    </li>
-                    
-                    <li data-id="5">
-                        <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
-                        <span>Resíduos Orgânicos</span>
-                    </li>
-                    
-                    <li data-id="6">
-                        <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
-                        <span>Óleo de Cozinha</span>
-                    </li>
+
+                <div class="field">
+                    <label for="address2">Número/Complemento</label>
+                    <input type="text" name="address2" requirede="requirede">
                 </div>
-                <input type="hidden" name="items">
-            </fieldset>
-            
-            <button type="submit">Cadastrar ponto de coleta</button>
-            
-        </form>
-    </div>
+            </div>
+
+            <div class="field-group">
+
+                <!-- .field*2 dica:criar as duas div com class field * = x2 -->
+                <div class="field" requirede="requirede">
+                    <label for="state">Estado</label>
+                    <select name="uf">
+                        <option value="">Selecione o Estado</option>
+                    </select>
+                </div>
+
+                <div class="field">
+                    <!-- label+input cria label e input -->
+                    <label for="city">Cidade</label>
+                    <select name="city" disabled="disabled" requirede="requirede">
+                        <option value="">Selecione a Cidade</option>
+                    </select>
+                </div>
+                <input type="hidden" name="state">
+            </div>
+        </fieldset>
+
+        <fieldset>
+            <legend>
+                <h2>Itens de Coleta</h2>
+                <span>Selecione um ou mais intes a baixo</span>
+            </legend>
+            <div class="items-grid">
+                <li data-id="1">
+                    <img src="/assets/lampadas.svg" alt="Lâmpadas">
+                    <span>Lâmpadas</span>
+                </li>
+                <!-- dica: ctrl + D seleciona os dois nomes identicos e pode ser alterado ao mesmo tempo -->
+                <li data-id="2">
+                    <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                    <span>Pilhas e Baterias</span>
+                </li>
+
+                <li data-id="3">
+                    <img src="/assets/papeis-papelao.svg" alt="Pepéis e Papelão">
+                    <span>Pepeis e Papelão</span>
+                </li>
+
+                <li data-id="4">
+                    <img src="/assets/eletronicos.svg" alt="Resíduos Eletronicos">
+                    <span>Resíduos Eletronicos</span>
+                </li>
+
+                <li data-id="5">
+                    <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
+                    <span>Resíduos Orgânicos</span>
+                </li>
+
+                <li data-id="6">
+                    <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
+                    <span>Óleo de Cozinha</span>
+                </li>
+            </div>
+            <input type="hidden" name="items">
+        </fieldset>
+
+        <button type="submit">Cadastrar ponto de coleta</button>
+
+    </form>
+{% endblock content %}
+
+{% block scripts %}
     <script src="/scripts/create-point.js"></script>
-</body>
-</html>
+{% endblock scripts %}
