--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -7,12 +7,14 @@
 
 {% block styles %}
     <link rel="stylesheet" href="styles/create-point.css">
+    <link rel="stylesheet" href="styles/modal.css">
+
 {% endblock styles %}
 
 {% block content %}
     {% include "partials/page-header.html" %}
 
-    <form action="">
+    <form action="/savepoint" method="post">
         <h1>Cadastro do ponto de coleta</h1>
         <fieldset>
             <legend>
@@ -71,32 +73,32 @@
                 <span>Selecione um ou mais intes a baixo</span>
             </legend>
             <div class="items-grid">
-                <li data-id="1">
+                <li data-id="Lâmpadas">
                     <img src="/assets/lampadas.svg" alt="Lâmpadas">
                     <span>Lâmpadas</span>
                 </li>
                 <!-- dica: ctrl + D seleciona os dois nomes identicos e pode ser alterado ao mesmo tempo -->
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
 
-                <li data-id="3">
+                <li data-id="Pepeis e Papelão">
                     <img src="/assets/papeis-papelao.svg" alt="Pepéis e Papelão">
                     <span>Pepeis e Papelão</span>
                 </li>
 
-                <li data-id="4">
+                <li data-id="Resíduos Eletronicos">
                     <img src="/assets/eletronicos.svg" alt="Resíduos Eletronicos">
                     <span>Resíduos Eletronicos</span>
                 </li>
 
-                <li data-id="5">
+                <li data-id="Resíduos Orgânicos">
                     <img src="/assets/organicos.svg" alt="Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
 
-                <li data-id="6">
+                <li data-id="Óleo de Cozinha">
                     <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
                     <span>Óleo de Cozinha</span>
                 </li>
@@ -107,7 +109,14 @@
         <button type="submit">Cadastrar ponto de coleta</button>
 
     </form>
+
 {% endblock content %}
+
+{% block modal %}
+    {% if seved %}
+    {%include "partials/point-created.html"%}
+    {% endif %}
+{%endblock modal %}
 
 {% block scripts %}
     <script src="/scripts/create-point.js"></script>
