--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -14,34 +14,33 @@
 {% block content %}
     {% include "partials/page-header.html" %}
     <main>
+
+        {% if total > 0 %}
         <h4>
-            <strong>2 Pontos</strong> Encontrados
+            <strong>{{total}} Pontos</strong>
+            Encontrados
         </h4>
         <div class="cards">
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1481761289552-381112059e05?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1461&q=80" alt="Colectoria">
-                <h1>Colectoria</h1>
-                <h3>Resíduos Eletrônicos, Lãmpadas</h3>
-                <p>
-                    Rio do sul, Santa Catarina
-                    <br/>
-                    Guilherme Gambella, Jardmin América
-                    <br/>
-                    Nº 260
-                </p>
-            </div>
-            <div class="card">
-                <img src="https://images.unsplash.com/photo-1528323273322-d81458248d40?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=801&q=80" alt="Papersider">
-                <h1>Papersider</h1>
-                <h3>Papéis e Papelão</h3>
-                <p>
-                    Rio do sul, Santa Catarina
-                    <br/>
-                    Guilherme Gambella, Jardmin América
-                    <br/>
-                    Nº 260
-                </p>
-            </div>
+            {% for place in places %}
+
+                <div class="card">
+                    <img src="{{ place.image }}" alt="Colectoria">
+                    <h1>{{ place.name }}</h1>
+                    <h3>{{ place.items }}</h3>
+                    <p>
+                        {{ place.city }}, {{ place.state }}
+                        <br/>
+                        {{ place.address }}
+                        <br/>
+                        {{ place.address2 }}
+                    </p>
+                </div>
+            {% endfor %}
         </div>
+
+        {%else%}
+        <h4><strong>Nenhum</strong> local encontrado<h4>
+        {% endif %}
+        
     </main>
 {% endblock content %}
